--- a/app/src/main/res/layout/masking_fragment.xml
+++ b/app/src/main/res/layout/masking_fragment.xml
@@ -9,10 +9,11 @@
 <!--Logo masker-->
     <FrameLayout
         android:id="@+id/logoMasker"
-        android:layout_width="130dp"
+        android:layout_width="110dp"
         android:layout_height="120dp"
         android:layout_marginStart="50dp"
         android:layout_marginBottom="30dp"
+        android:alpha="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -48,10 +49,10 @@
     <FrameLayout
         android:id="@+id/stripeMasker"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="30dp"
         android:layout_marginStart="200dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginBottom="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -87,10 +88,10 @@
 <!--Clock masker-->
     <FrameLayout
         android:id="@+id/clockMasker"
-        android:layout_width="130dp"
-        android:layout_height="60dp"
+        android:layout_width="140dp"
+        android:layout_height="65dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginBottom="95dp"
+        android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
