--- a/app/src/main/res/layout/masking_fragment.xml
+++ b/app/src/main/res/layout/masking_fragment.xml
@@ -50,8 +50,8 @@
     <FrameLayout
             android:id="@+id/boldStripeMasker"
             android:layout_width="0dp"
-            android:layout_height="65dp"
-            android:layout_marginStart="240dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="150dp"
             android:layout_marginEnd="180dp"
             android:layout_marginBottom="60dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -135,7 +135,8 @@
             android:layout_height="70dp"
             android:layout_marginBottom="60dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="1dp">
 
         <ImageView
                 android:id="@+id/oledBackground5"
