--- a/app/src/main/res/layout/masking_fragment.xml
+++ b/app/src/main/res/layout/masking_fragment.xml
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/oledBackground"
+            android:id="@+id/logoMaskerBackground"
             android:layout_width="1920px"
             android:layout_height="wrap_content"
             android:adjustViewBounds="false"
@@ -34,7 +34,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/oledBackground2"
+            android:id="@+id/logoMaskerBackground2"
             android:layout_width="1920px"
             android:layout_height="wrap_content"
             android:adjustViewBounds="false"
@@ -47,6 +47,48 @@
             app:layout_constraintHorizontal_bias="0.03"
             app:layout_constraintStart_toStartOf="parent" />
     </FrameLayout>
+
+    <!--Age restriction masker-->
+
+    <FrameLayout
+        android:id="@+id/ageRestrictionMasker"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="30dp"
+        android:alpha="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/ageRestrictiondBackground"
+            android:layout_width="1920px"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="false"
+            android:cropToPadding="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/oled"
+            android:translationX="150px"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.03"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/ageRestrictionBackground2"
+            android:layout_width="1920px"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="false"
+            android:cropToPadding="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/oled"
+            android:translationX="-1850px"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.03"
+            app:layout_constraintStart_toStartOf="parent" />
+    </FrameLayout>
+
     <!--Bold Stripe masker-->
     <FrameLayout
         android:id="@+id/boldStripeMasker"
