--- a/app/src/main/res/layout/masking_fragment.xml
+++ b/app/src/main/res/layout/masking_fragment.xml
@@ -11,10 +11,11 @@
 
     <FrameLayout
         android:id="@+id/logoMasker"
-        android:layout_width="116dp"
-        android:layout_height="120dp"
+        android:layout_width="wrap_content"
+        android:layout_height="130dp"
         android:layout_marginStart="50dp"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginEnd="200dp"
         android:alpha="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -135,10 +136,10 @@
     <FrameLayout
             android:id="@+id/thinStripeMasker"
             android:layout_width="0dp"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             android:layout_marginStart="150dp"
-            android:layout_marginEnd="75dp"
-            android:layout_marginBottom="36dp"
+            android:layout_marginEnd="140dp"
+            android:layout_marginBottom="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
@@ -173,41 +174,23 @@
     </FrameLayout>
 <!--Clock masker-->
     <FrameLayout
-            android:id="@+id/clockMasker"
-            android:layout_width="200dp"
-            android:layout_height="70dp"
-            android:layout_marginBottom="60dp"
-            android:layout_marginEnd="1dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            >
-        <ImageView
-                android:id="@+id/oledBackground5"
-                android:layout_width="1920px"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="false"
-                android:cropToPadding="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/oled"
-                android:translationX="150px"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.03"
-                app:layout_constraintStart_toStartOf="parent" />
+        android:id="@+id/clockMasker"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
-                android:id="@+id/oledBackground6"
-                android:layout_width="1920px"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="false"
-                android:cropToPadding="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/oled"
-                android:translationX="-1850px"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.03"
-                app:layout_constraintStart_toStartOf="parent" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/circleClockBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false"
+            android:scaleType="center"
+            android:src="@drawable/oled"
+            app:shapeAppearanceOverlay="@style/circleImageView" />
 
     </FrameLayout>
     <!--Cat image !-->
