extract masking layouts to separate files

--- a/app/src/main/res/layout/masking_fragment.xml
+++ b/app/src/main/res/layout/masking_fragment.xml
@@ -1,220 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layoutContainer"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.mwi.oledsaver.MaskingFragment">
 
-<!--Logo masker-->
-
-    <FrameLayout
-        android:id="@+id/logoMasker"
-        android:layout_width="wrap_content"
-        android:layout_height="130dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginEnd="200dp"
-        android:alpha="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageView
-            android:id="@+id/logoMaskerBackground"
-            android:layout_width="1920px"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="false"
-            android:cropToPadding="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/oled"
-            android:translationX="150px"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.03"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-            android:id="@+id/logoMaskerBackground2"
-            android:layout_width="1920px"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="false"
-            android:cropToPadding="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/oled"
-            android:translationX="-1850px"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.03"
-            app:layout_constraintStart_toStartOf="parent" />
-    </FrameLayout>
-
-    <!--Age restriction masker-->
-
-    <FrameLayout
-        android:id="@+id/ageRestrictionMasker"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="30dp"
-        android:alpha="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/ageRestrictiondBackground"
-            android:layout_width="1920px"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="false"
-            android:cropToPadding="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/oled"
-            android:translationX="150px"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.03"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-            android:id="@+id/ageRestrictionBackground2"
-            android:layout_width="1920px"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="false"
-            android:cropToPadding="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/oled"
-            android:translationX="-1850px"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.03"
-            app:layout_constraintStart_toStartOf="parent" />
-    </FrameLayout>
-
-    <!--Bold Stripe masker-->
-    <FrameLayout
-        android:id="@+id/boldStripeMasker"
-        android:layout_width="0dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="150dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginBottom="63dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageView
-            android:id="@+id/boldStripeBackground1"
-            android:layout_width="1920px"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="false"
-            android:cropToPadding="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/oled"
-            android:translationX="150px"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.03"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-            android:id="@+id/boldStripeBackground2"
-            android:layout_width="1920px"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="false"
-            android:cropToPadding="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/oled"
-            android:translationX="-1850px"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.03"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    </FrameLayout>
-    <!--Thin Stripe masker-->
-    <FrameLayout
-            android:id="@+id/thinStripeMasker"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="150dp"
-            android:layout_marginEnd="140dp"
-            android:layout_marginBottom="30dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-        <ImageView
-                android:id="@+id/thinStripeBackground1"
-                android:layout_width="1920px"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="false"
-                android:cropToPadding="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/oled"
-                android:translationX="150px"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.03"
-                app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-                android:id="@+id/thinStripeBackground2"
-                android:layout_width="1920px"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="false"
-                android:cropToPadding="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/oled"
-                android:translationX="-1850px"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.03"
-                app:layout_constraintStart_toStartOf="parent" />
-    </FrameLayout>
-<!--Clock masker-->
-    <FrameLayout
-        android:id="@+id/clockMasker"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/circleClockBackground"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:cropToPadding="false"
-            android:scaleType="center"
-            android:src="@drawable/oled"
-            app:shapeAppearanceOverlay="@style/circleImageView" />
-
-    </FrameLayout>
-    <!--Cat image !-->
-    <FrameLayout
-        android:id="@+id/randomCat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="300dp"
-        android:layout_marginBottom="330dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"
-        >
-
-        <ImageView
-            android:id="@+id/randomCatImage"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:src="@android:mipmap/sym_def_app_icon"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-    </FrameLayout>
-
+    <include layout="@layout/mask_logo" />
+    <include layout="@layout/mask_age_restriction" />
+    <include layout="@layout/mask_stripe_bold" />
+    <include layout="@layout/mask_stripe_slim" />
+    <include layout="@layout/mask_clock" />
+    <include layout="@layout/mask_cats" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
