--- a/app/src/main/res/layout/mask_clock.xml
+++ b/app/src/main/res/layout/mask_clock.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clockMasker"
-    android:layout_width="110dp"
-    android:layout_height="110dp"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
     android:layout_marginEnd="38dp"
-    android:layout_marginBottom="20dp"
+    android:layout_marginBottom="21dp"
+    android:alpha="0.95"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     tools:showIn="@layout/masking_fragment">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/circleClockBackground"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         android:scaleType="center"
         android:src="@drawable/oled"
         app:shapeAppearanceOverlay="@style/circleImageView" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
