--- a/app/src/main/res/layout/mask_logo.xml
+++ b/app/src/main/res/layout/mask_logo.xml
@@ -1,54 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/logoMasker"
-    android:layout_width="wrap_content"
+    android:layout_width="130dp"
     android:layout_height="130dp"
-    android:layout_marginStart="50dp"
-    android:layout_marginBottom="30dp"
-    android:layout_marginEnd="200dp"
-    android:alpha="1"
+    android:layout_marginStart="37dp"
+    android:layout_marginBottom="10dp"
+    android:alpha="0.95"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     tools:showIn="@layout/masking_fragment">
 
-    <ImageView
-        android:id="@+id/logoMaskerBackground"
-        android:layout_width="1920px"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="false"
-        android:cropToPadding="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/oled"
-        android:translationX="150px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.03"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/logoMaskerBackground2"
-        android:layout_width="1920px"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="false"
-        android:cropToPadding="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/oled"
-        android:translationX="-1850px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.03"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/circleLogoBackground"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/bigLogoCircle"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="30dp"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         android:scaleType="center"
         android:src="@drawable/oled"
-        app:shapeAppearanceOverlay="@style/circleImageView" />
+        app:shapeAppearanceOverlay="@style/circleImageView"
+        />
 
-</FrameLayout>
+    <com.google.android.material.imageview.ShapeableImageView
+
+        android:id="@+id/smallLogoCircle"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:adjustViewBounds="true"
+        android:cropToPadding="false"
+        android:scaleType="center"
+        android:src="@drawable/oled"
+        app:shapeAppearanceOverlay="@style/circleImageView"
+
+
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
