--- a/app/src/main/res/layout/mask_stripe_bold.xml
+++ b/app/src/main/res/layout/mask_stripe_bold.xml
@@ -1,45 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/boldStripeMasker"
-    android:layout_width="0dp"
-    android:layout_height="65dp"
-    android:layout_marginStart="150dp"
-    android:layout_marginEnd="180dp"
+    android:layout_width="match_parent"
+    android:layout_height="75dp"
+    android:layout_marginStart="100dp"
     android:layout_marginBottom="63dp"
+    android:layout_marginEnd="130dp"
+    android:alpha="0.95"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     tools:showIn="@layout/masking_fragment">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/boldStripeBackground1"
-        android:layout_width="1920px"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="false"
-        android:cropToPadding="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/oled"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:adjustViewBounds="true"
+        android:cropToPadding="false"
+        android:scaleType="center"
+
         android:translationX="150px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.03"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/boldStripeBackground2"
-        android:layout_width="1920px"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="false"
-        android:cropToPadding="true"
-        android:scaleType="centerCrop"
         android:src="@drawable/oled"
-        android:translationX="-1850px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.03"
-        app:layout_constraintStart_toStartOf="parent" />
+        />
 
-</FrameLayout>
+<!--    <ImageView-->
+<!--        android:id="@+id/boldStripeBackground2"-->
+<!--        android:layout_width="1920px"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:adjustViewBounds="false"-->
+<!--        android:cropToPadding="true"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        android:src="@drawable/oled"-->
+<!--        android:translationX="-1850px"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.03"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
+
+</androidx.constraintlayout.widget.ConstraintLayout>
