--- a/app/src/main/res/layout/mask_stripe_slim.xml
+++ b/app/src/main/res/layout/mask_stripe_slim.xml
@@ -6,8 +6,9 @@
     android:layout_width="0dp"
     android:layout_height="40dp"
     android:layout_marginStart="150dp"
-    android:layout_marginEnd="140dp"
-    android:layout_marginBottom="30dp"
+    android:layout_marginEnd="135dp"
+    android:layout_marginBottom="26dp"
+    android:alpha="0.95"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
