--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.mwi.oledsaver.MaskingFragment"
+        android:name="com.mwi.oledsaver.mask.MaskingFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/masking_fragment">
     </fragment>
