--- a/app/src/main/res/layout/mask_stripe_slim.xml
+++ b/app/src/main/res/layout/mask_stripe_slim.xml
@@ -1,44 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/thinStripeMasker"
     android:layout_width="0dp"
-    android:layout_height="40dp"
+    android:layout_height="50dp"
     android:layout_marginStart="150dp"
     android:layout_marginEnd="135dp"
     android:layout_marginBottom="26dp"
     android:alpha="0.95"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
     tools:showIn="@layout/masking_fragment">
 
-    <ImageView
-        android:id="@+id/thinStripeBackground1"
-        android:layout_width="1920px"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="false"
-        android:cropToPadding="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/oled"
-        android:translationX="150px"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/thinStripeBackground"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.03"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:adjustViewBounds="true"
+        android:cropToPadding="false"
+        android:scaleType="center"
+        android:src="@drawable/oled"
+        app:shapeAppearanceOverlay="@style/roundedRectangle"
+        />
 
-    <ImageView
-        android:id="@+id/thinStripeBackground2"
-        android:layout_width="1920px"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="false"
-        android:cropToPadding="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/oled"
-        android:translationX="-1850px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.03"
-        app:layout_constraintStart_toStartOf="parent" />
-</FrameLayout>
+
+<!--    <ImageView-->
+<!--        android:id="@+id/thinStripeBackground1"-->
+<!--        android:layout_width="1920px"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:adjustViewBounds="false"-->
+<!--        android:cropToPadding="true"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        android:src="@drawable/oled"-->
+<!--        android:translationX="150px"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.03"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/thinStripeBackground2"-->
+<!--        android:layout_width="1920px"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:adjustViewBounds="false"-->
+<!--        android:cropToPadding="true"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        android:src="@drawable/oled"-->
+<!--        android:translationX="-1850px"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.03"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
+</androidx.constraintlayout.widget.ConstraintLayout>
