--- a/app/src/main/res/layout/mask_age_restriction.xml
+++ b/app/src/main/res/layout/mask_age_restriction.xml
@@ -5,38 +5,26 @@
     android:id="@+id/ageRestrictionMasker"
     android:layout_width="40dp"
     android:layout_height="40dp"
-    android:layout_marginStart="49dp"
-    android:layout_marginTop="29dp"
+    android:layout_marginStart="52dp"
+    android:layout_marginTop="32dp"
     android:alpha="0.5"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     tools:showIn="@layout/masking_fragment">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ageRestrictiondBackground"
-        android:layout_width="1920px"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="false"
-        android:cropToPadding="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/oled"
-        android:translationX="150px"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.03"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:adjustViewBounds="true"
+        android:cropToPadding="false"
+        android:scaleType="center"
+        android:src="@drawable/oled"
+        app:shapeAppearanceOverlay="@style/roundedRectangle"
+        />
 
-    <ImageView
-        android:id="@+id/ageRestrictionBackground2"
-        android:layout_width="1920px"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="false"
-        android:cropToPadding="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/oled"
-        android:translationX="-1850px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.03"
-        app:layout_constraintStart_toStartOf="parent" />
 </FrameLayout>
