--- a/app/src/main/res/layout/mask_stripe_bold.xml
+++ b/app/src/main/res/layout/mask_stripe_bold.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/boldStripeMasker"
     android:layout_width="match_parent"
-    android:layout_height="75dp"
-    android:layout_marginStart="100dp"
-    android:layout_marginBottom="63dp"
+    android:layout_height="90dp"
+    android:layout_marginStart="200dp"
+    android:layout_marginBottom="58dp"
     android:layout_marginEnd="130dp"
     android:alpha="0.95"
     app:layout_constraintBottom_toBottomOf="parent"
@@ -14,30 +14,18 @@
     tools:showIn="@layout/masking_fragment">
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/boldStripeBackground1"
+        android:id="@+id/boldStripeBackground"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
+        android:layout_height="75dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         android:scaleType="center"
-
-        android:translationX="150px"
         android:src="@drawable/oled"
+        app:shapeAppearanceOverlay="@style/roundedRectangle"
         />
-
-<!--    <ImageView-->
-<!--        android:id="@+id/boldStripeBackground2"-->
-<!--        android:layout_width="1920px"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:adjustViewBounds="false"-->
-<!--        android:cropToPadding="true"-->
-<!--        android:scaleType="centerCrop"-->
-<!--        android:src="@drawable/oled"-->
-<!--        android:translationX="-1850px"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.03"-->
-<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
