Fixed transparency animation, added back button handling to dismiss masking for x time (but not yet effective, just UI)

--- a/app/src/main/res/layout/mask_cats.xml
+++ b/app/src/main/res/layout/mask_cats.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="300dp"
     android:layout_marginBottom="330dp"
+    android:alpha="1"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     android:visibility="invisible"
