--- a/app/src/main/res/layout/activity_exit.xml
+++ b/app/src/main/res/layout/activity_exit.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mwi.oledsaver.exit.ExitActivity">
+    tools:context="com.mwi.oledsaver.activity.MainActivity">
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/exit_fragment" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
