--- a/app/src/main/res/layout/exit_fragment.xml
+++ b/app/src/main/res/layout/exit_fragment.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layoutContainer"
+    android:id="@+id/exit_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.mwi.oledsaver.exit.ExitFragment">
@@ -24,6 +24,7 @@
             android:layout_width="200dp"
             android:layout_height="80dp"
             android:drawableStart="@drawable/cat"
+            android:state_hovered="@drawable/cat"
             android:text="Odłóż na 5 minut" />
 
         <Button
