Added TVP2 masking, title text view for all tv stations supported

--- a/app/src/main/res/layout/masking_fragment_tvn.xml
+++ b/app/src/main/res/layout/masking_fragment_tvn.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.mwi.oledsaver.mask.MaskingFragmentTvn">
 
-
+    <include layout="@layout/mask_title" />
     <include layout="@layout/mask_logo" />
     <include layout="@layout/mask_age_restriction" />
     <include layout="@layout/mask_stripe_bold" />
