--- a/app/src/main/res/layout/mask_logo_tvn.xml
+++ b/app/src/main/res/layout/mask_logo_tvn.xml
@@ -5,11 +5,12 @@
     android:id="@+id/logoMaskerTvn"
     android:layout_width="130dp"
     android:layout_height="130dp"
-    android:layout_marginStart="37dp"
-    android:layout_marginBottom="10dp"
+    android:layout_marginStart="0dp"
+    android:layout_marginBottom="0dp"
     android:alpha="1"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
+    tools:context="com.mwi.oledsaver.mask.LogoMaskerTvn"
     >
 
     <com.google.android.material.imageview.ShapeableImageView
