--- a/app/src/main/res/layout/mask_logo_tvp2.xml
+++ b/app/src/main/res/layout/mask_logo_tvp2.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/logoMaskerTvp2"
     android:layout_width="180dp"
     android:layout_height="180dp"
-    android:layout_marginStart="-20dp"
-    android:layout_marginBottom="-20dp"
+    android:gravity="center|bottom"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentStart="true"
     android:alpha="1"
-    android:gravity="center"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent">
+    android:background="@drawable/layout_border"
+    >
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/bigLogoCircleTvp2"
@@ -39,4 +39,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:shapeAppearanceOverlay="@style/roundedRectangle" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
