--- a/app/src/main/res/layout/masking_fragment_tvn.xml
+++ b/app/src/main/res/layout/masking_fragment_tvn.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/layout_border_tvn"
     tools:context="com.mwi.oledsaver.mask.MaskingFragmentTvn">
 
     <include layout="@layout/mask_title" />
