--- a/app/src/main/res/layout/masking_fragment_tvp2.xml
+++ b/app/src/main/res/layout/masking_fragment_tvp2.xml
@@ -3,10 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/masking_fragment_tvp2"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/layout_border_green"
+    android:gravity="bottom"
 
     tools:context="com.mwi.oledsaver.mask.MaskingFragmentTvp2">
 
