--- a/app/src/main/res/layout/mask_logo_tvp2.xml
+++ b/app/src/main/res/layout/mask_logo_tvp2.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/logoMaskerTvp2"
-    android:layout_width="180dp"
-    android:layout_height="180dp"
-    android:gravity="center|bottom"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentStart="true"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
     android:alpha="1"
     android:background="@drawable/layout_border"
     >
@@ -39,4 +40,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:shapeAppearanceOverlay="@style/roundedRectangle" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
