--- a/app/src/main/res/layout/masking_fragment_tvn.xml
+++ b/app/src/main/res/layout/masking_fragment_tvn.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/masking_fragment_tvn"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/layout_border_tvn"
     tools:context="com.mwi.oledsaver.mask.MaskingFragmentTvn">
 
     <include layout="@layout/mask_title" />
